docs(known-issues): 5.8 follow-up #6 -- main_thread_group race root-caused (2 bugs) and fixed
Documents the get_or_create_main_thread_group fix landed in b4ab3ad3:
the TOCTOU race follow-up #4 flagged OPEN, plus a second, independently-
required fix (SharedVm::main_thread_group was never a GC root) found while
verifying the TOCTOU fix alone did not eliminate the live-captured crash.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>